springify shopService and DemoRunner