@@ -1,22 +1,18 @@
 package org.example;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
+import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ShopService {
     private final OrderRepo orderRepo;
     private final ProductRepo productRepo;
 
-    public ShopService(OrderRepo orderRepo, ProductRepo productRepo) {
-        this.orderRepo = orderRepo;
-        this.productRepo = productRepo;
-    }
 
     public List<Order> getOrdersByStatus(OrderStatus orderStatus) {
         return orderRepo.findByOrderStatus(orderStatus);
@@ -27,7 +23,7 @@ public class ShopService {
                             OrderStatus orderStatus) {
         // validate each product exists
         items.forEach(item ->
-                productRepo.getProductById(item.product().id())
+                productRepo.findById(item.product().id())
                         .orElseThrow(() -> new ProductNotFoundException(item.product().id()))
         );
 
@@ -37,8 +33,7 @@ public class ShopService {
                 orderStatus,
                 Instant.now()
         );
-        orderRepo.save(newOrder);
-        return newOrder;
+        return orderRepo.save(newOrder);
     }
 
     public Order updateOrderStatus(String orderId, OrderStatus newStatus) {
@@ -55,25 +50,17 @@ public class ShopService {
         Order existing = orderRepo.findById(orderId)
                 .orElseThrow(() -> new NoSuchElementException("Order not found: " + orderId));
 
-        List<OrderItem> updatedItems = existing.items().stream()
-                .map(item ->
-                        item.product().id().equals(productId)
-                                ? new OrderItem(item.product(), newQuantity)
-                                : item
-                )
-                .collect(Collectors.toList());
+        var updatedItems = existing.items().stream()
+                .map(item -> item.product().id().equals(productId)
+                        ? new OrderItem(item.product(), newQuantity)
+                        : item)
+                .toList();
 
-        boolean found = updatedItems.stream()
-                .anyMatch(item -> item.product().id().equals(productId));
-
-        if (!found) {
-            throw new NoSuchElementException(
-                    "Product not found in order: " + productId
-            );
+        if (updatedItems.stream().noneMatch(item -> item.product().id().equals(productId))) {
+            throw new NoSuchElementException("Product not found in order: " + productId);
         }
 
         Order updated = existing.withItems(updatedItems);
         return orderRepo.save(updated);
     }
-
 }
